--- a/src/components/UserPermissions/UserPermissions.css
+++ b/src/components/UserPermissions/UserPermissions.css
@@ -16,7 +16,7 @@
     font-size: 1.8rem;
     text-align: center;
     margin-bottom: 15px;
-    color: #0f60b8;
+    color: #343a40;
     /* Primary color */
 }
 
